# sakura

./: CMakeLists.GNU.txt  CMakeLists.MSVC.txt  CMakeLists.txt  appveyor.yml  build-all.bat  build-by-cmake.bat  build-chm.bat  build-gnu.bat  build-installer.bat  zipArtifacts.bat  zipArtifacts.txt
cmake/: FindNuGet.cmake  FindNuGetGTest.cmake
sakura/: githash.bat  postBuild.bat
sakura_core/cmd/: CViewCommander_File.cpp
sakura_core/dlg/: CDialog.cpp  CDialog.h  CDlgGrepReplace.cpp  CDlgGrepReplace.h
sakura_core/doc/: CDocFileOperation.cpp  CDocLocker.cpp  CDocLocker.h  CEditDoc.cpp  CEditDoc.h
sakura_core/doc/layout/: CLayout.h
sakura_core/doc/logic/: CDocLine.h
sakura_core/env/: CAppNodeManager.h
sakura_core/io/: CFile.cpp  CFile.h
sakura_core/mfclike/: CMyWnd.h
sakura_core/parse/: CWordParse.cpp  CWordParse.h
sakura_core/print/: CPrintPreview.h
sakura_core/types/: CType_Tex.cpp
sakura_core/view/colors/: CColorStrategy.h  CColor_Url.cpp
sakura_core/window/: CEditWnd.cpp
tests/: CMakeLists.txt  build-project.bat  create-project.bat  packages.config  run-tests.bat  test_result_filter_tell_AppVeyor.bat
tests/unittests/: CMakeLists.txt
tools/: RestoreCommitterDate.ps1  RestoreCommitterDateRoughly.ps1  g++_error_filter_tell_AppVeyor.ps1  recipeProcessor.bat
tools/CMake/: PrecompiledHeader.cmake
tools/zip/: find-7z.bat
